<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_imagem"
    android:padding="20dp"
    tools:context=".activitys.CadastroActivity">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:background="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.654" />

  <EditText
      android:id="@+id/editNome"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="0dp"
      android:background="@color/textWhite"
      android:ems="10"
      android:hint="@string/digite_nome"
      android:inputType="textPersonName"
      android:padding="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.372" />

  <EditText
      android:id="@+id/editSenha"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="0dp"
      android:background="@color/textWhite"
      android:ems="10"
      android:hint="@string/digite_senha"
      android:inputType="textPassword"
      android:padding="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.6"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editEmail"
      app:layout_constraintVertical_bias="0.001111111" />

  <EditText
      android:id="@+id/editEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="0dp"
      android:background="@color/textWhite"
      android:ems="10"
      android:hint="@string/digite_email"
      android:inputType="textEmailAddress"
      android:padding="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editNome"
      app:layout_constraintVertical_bias="0.001" />

  <Button
      android:id="@+id/button3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:onClick="validarCadastroUsuario"
      android:text="@string/cadastrar"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.4"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.734" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo_app" />

</androidx.constraintlayout.widget.ConstraintLayout>